# strimzi-kafka-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.adoc  README.md  commons.py  constants.py  kafka_cli.py  kfk.py  kfk_cli.py  kfk_clusters.py  kfk_configs.py  kfk_console.py  kfk_topics.py  kfk_users.py  kubectl_command_builder.py  main.py  option_extensions.py  post_install.py  post_setup.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: bake.yml  build.yml  deploy.yml  post-deploy.yml  pre_deploy_actions.yml  requirements.txt
Formula/: strimzi-kafka-cli.rb
docs/: index.html
examples/: .gitignore
examples/2_tls_authentication/: client.properties  client_1.properties  client_2.properties  get_keys.sh  readme.md
examples/3_simple_acl_authorization/: readme.md
examples/3_simple_authorization/: client.properties  readme.md
examples/4_configuration/: readme.md
examples/5_connect/: camel_es_connector.properties  connect.properties  connect_v2.properties  elasticsearch.yaml  readme.md  twitter_connector.properties  twitter_connector.properties.bck
examples/5_connect/scripts/: reset_example.sh  setup_example.sh
kfk/: __init__.py  acls_command.py  argument_extensions.py  clusters_command.py  command.py  commons.py  config.py  configs_command.py  connect_command.py  console_command.py  constants.py  dependencies.py  env_command.py  kubectl_command_builder.py  kubernetes_commons.py  main.py  mcp_server.py  messages.py  operator_command.py  option_extensions.py  setup.py  topics_command.py  users_command.py  utils.py  version_command.py
kfk/commands/: acls.py  clusters.py  configs.py  connect.py  connectors.py  console.py  env.py  main.py  mcp.py  operator.py  topics.py  users.py  version.py
kfk/commands/connect/: __init__.py  clusters.py  connectors.py
src/kfk/: __init__.py  argument_extensions.py  commons.py  kubectl_command_builder.py  kubernetes_commons.py  option_extensions.py  setup.py
src/kfk/commands/: __init__.py  acls.py  clusters.py  configs.py  console.py  env.py  operator.py  topics.py  users.py
src/kfk/commands/connect/: __init__.py  clusters.py  connectors.py
tests/: test_acls_command.py  test_clusters_command.py  test_config.py  test_configs_command.py  test_connect_clusters_command.py  test_connect_command.py  test_connect_connectors_command.py  test_connectors_command.py  test_console_command.py  test_kfk.py  test_kfk_clusters.py  test_kfk_topics.py  test_kfk_users.py  test_kubectl_cmd_builder.py  test_main.py  test_mcp_command.py  test_mcp_server.py  test_operator_command.py  test_setup.py  test_topics_command.py  test_users_command.py  test_utils.py
tests/files/: client.properties  connect.properties  connect_with_invalid_url.properties  connect_with_only_image.properties  connect_with_zip_jar_plugins.properties  twitter-connector.properties  twitter_connector.properties  twitter_connector_with_config_change.properties
tests/files/strimzi/examples/connect/: kafka-connect.yaml
tests/files/strimzi/examples/kafka/: kafka-ephemeral.yaml
tests/files/yaml/: broker-nodepool.yaml  broker-nodepool_with_one_replica.yaml  broker-nodepool_with_two_replicas.yaml  kafka-cluster_create.yaml  kafka-cluster_create_one_replica.yaml  kafka-cluster_create_two_replicas.yaml  kafka-cluster_create_with_listener.yaml  kafka-config.yaml  kafka-connect-connector-file-stream.yaml  kafka-connect-connector-twitter.yaml  kafka-connect-connector-twitter_with_config_change.yaml  kafka-connect.yaml  kafka-connect_with_image.yaml  kafka-connect_with_three_replicas.yaml  kafka-connect_with_zip_jar_plugins.yaml  kafka-ephemeral.yaml  kafka-ephemeral_authorization_removed.yaml  kafka-ephemeral_name_updated.yaml  kafka-ephemeral_two_additional_configs_deleted.yaml  kafka-ephemeral_updated.yaml  kafka-ephemeral_with_added_listener.yaml  kafka-ephemeral_with_added_listener_and_deleted_listener.yaml  kafka-ephemeral_with_custom_auth_listener.yaml  kafka-ephemeral_with_custom_auth_listener_config.yaml  kafka-ephemeral_with_custom_authorization.yaml  kafka-ephemeral_with_deleted_listener.yaml  kafka-ephemeral_with_one_additional_config.yaml  kafka-ephemeral_with_one_config.yaml  kafka-ephemeral_with_one_replica.yaml  kafka-ephemeral_with_one_replica_one_zk_replica.yaml  kafka-ephemeral_with_scram_listener.yaml  kafka-ephemeral_with_simple_authorization.yaml  kafka-ephemeral_with_simple_authorization_and_super_users.yaml  kafka-ephemeral_with_two_additional_configs.yaml  kafka-ephemeral_with_two_replicas.yaml  kafka-ephemeral_with_updated_listener.yaml  kubeconfig  topic.yaml  topic_12_partitions.yaml  topic_with_one_config.yaml  (+12 more)
tests/yaml/: topic_alter_with_one_config.yaml  topic_alter_with_two_configs.yaml  user_alter_one_quota.yaml  user_alter_two_quotas.yaml  user_alter_with_quotas_empty.yaml  user_create.yaml  user_with_authorization.yaml  user_with_one_quota.yaml  user_with_quotas_empty.yaml  user_without_quotas.yaml
website/: index.html
