[tool.poetry]
name = "strimzi-kafka-cli"
version = "0.1.0a68"
description = "Command Line Interface for Strimzi Kafka Operator"
authors = ["Aykut Bulgu <aykut@systemcraftsman.com>"]
maintainers = ["Aykut Bulgu <aykut@systemcraftsman.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "kfk"}]
homepage = "https://github.com/systemcraftsman/strimzi-kafka-cli"
repository = "https://github.com/systemcraftsman/strimzi-kafka-cli"
documentation = "https://github.com/systemcraftsman/strimzi-kafka-cli/blob/main/README.md"
keywords = ["kafka", "strimzi", "cli", "operator", "kubernetes", "k8s","apache-kafka"]

classifiers=[
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS'
]

[tool.poetry.urls]
Tracker = "https://github.com/systemcraftsman/strimzi-kafka-cli/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.12.0"
click = "8.0.1"
pyyaml = "^6.0.1"
wget = "^3.2"
jproperties = "^2.1.1"


[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"
pytest = "^7.4.2"
wheel = "^0.40.0"
build = "^0.10.0"
ruff = "^0.0.280"
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
flake8 = { version = "*", python = ">=3.8.1,<3.12.0" }
flake8-pyproject = "^1.2.3"


[tool.flake8]
exclude = ".git,venv,.venv,env,.env,__pycache__,docs,dist"
max-complexity = 10
max-line-length = 88
extend-ignore = """
    W503,
    E203,
    E701,
    C901,
"""

per-file-ignores = """
    __init__.py: F401
"""

[tool.isort]
line_length = 88
profile = "black"

[tool.bandit]
target = ["tests", "kfk"]
tests = ["B201", "B301"]

[tool.autoflake]
check = true
imports = ["kfk"]


[tool.black]
target-version = ["py38"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''


[tool.ruff]
target-version = "py38"
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "yarn-error.log",
    "yarn.lock",
    "docs",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402","F401"]

[tool.ruff.pylint]
max-args = 20


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["docs*", "test*","examples"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kfk = "kfk.main:kfk"
