[metadata]
name = strimzi-kafka-cli
version = 0.1.0-alpha58
description = Command Line Interface for Strimzi Kafka Operator
url = https://github.com/systemcraftsman/strimzi-kafka-cli
long_description = file: README.md
long_description_content_type = text/markdown
author = Aykut Bulgu
license='Apache-2.0'
license_file = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
author-email = aykut@systemcraftsman.com
keywords = cli, command-line-interface, strimzi, kafka, kubernetes, openshift, apache-kafka
maintainer = Aykut Bulgu
maintainer-email = aykut@systemcraftsman.com
project_urls =
    Source=https://github.com/systemcraftsman/strimzi-kafka-cli
    Tracker=https://github.com/systemcraftsman/strimzi-kafka-cli/issues

[options]
install_requires =
    click==8.0.1
    PyYAML==6.0
    wget==3.2
    jproperties==2.1.1
python_requires = >=3.6
packages =
    kfk
    kfk.commands
    kfk.commands.connect
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts =
    kfk=kfk.main:kfk

[options.packages.find]
where = kfk

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
exclude = .git,venv,.venv,env,.env,__pycache__,docs,dist
max-complexity = 10